--- a/YunxiBaby.csproj
+++ b/YunxiBaby.csproj
@@ -23,7 +23,7 @@
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
   </ItemGroup>
   <ItemGroup> 
-    <Content Include="localhost.pfx" CopyToPublishDirectory="Always" />
+    <Content Include=".\localhost.pfx" CopyToPublishDirectory="Always" />
   </ItemGroup>
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
