--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -26,6 +26,12 @@
         "@ionic-native/splash-screen": "^5.0.0-beta.17",
         "@ionic-native/status-bar": "^5.0.0-beta.17",
         "@ionic/angular": "^4.0.0-beta.8",
+        "cordova-plugin-device": "^2.0.2",
+        "cordova-plugin-ionic-keyboard": "^2.1.2",
+        "cordova-plugin-ionic-webview": "^2.1.3",
+        "cordova-plugin-splashscreen": "^5.0.2",
+        "cordova-plugin-statusbar": "^2.4.2",
+        "cordova-plugin-whitelist": "^1.3.3",
         "core-js": "^2.5.3",
         "zone.js": "^0.8.26"
     },
@@ -57,5 +63,16 @@
         "tslint": "~5.11.0",
         "typescript": "^2.9.2"
     },
-    "description": "An Ionic project"
+    "description": "An Ionic project",
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-whitelist": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-ionic-webview": {},
+            "cordova-plugin-ionic-keyboard": {}
+        },
+        "platforms": []
+    }
 }
