--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -33,6 +33,7 @@
         "cordova-plugin-statusbar": "^2.4.2",
         "cordova-plugin-whitelist": "^1.3.3",
         "core-js": "^2.5.3",
+        "node-sass": "^4.9.3",
         "zone.js": "^0.8.26"
     },
     "devDependencies": {
